--- a/app/src/main/res/layout/item_custom_edit_text.xml
+++ b/app/src/main/res/layout/item_custom_edit_text.xml
@@ -13,9 +13,19 @@
         android:layout_height="wrap_content"
         android:background="@drawable/enter_number_rounded_bg">
 
+        <ImageView
+            android:id="@+id/editText_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/device_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editText_layout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="70dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
@@ -25,9 +35,8 @@
             app:expandedHintEnabled="false"
             app:hintTextColor="#9C9FA5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editText_icon"
             app:layout_constraintTop_toTopOf="parent">
-
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editText_input"
@@ -36,8 +45,8 @@
                 android:background="@color/white"
                 android:hint="AB123456"
                 android:inputType="text"
-                android:paddingBottom="4dp"
                 android:maxLength="10"
+                android:paddingBottom="4dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_red_dark"
                 android:textColorHint="@color/color_red_dark" />
