--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="black_60_fill">#3D3D3D</color>
     <color name="primary_50">#50255CA8</color>
     <color name="grey_30">#30000000</color>
-    <color name="grey_20">#20000000</color>
+    <color name="grey_20">#E3E3E3</color>
     <color name="color_red">#ff0000</color>
     <color name="color_red_dark">#790000</color>
     <color name="color_green">#43b600</color>
