--- a/app/src/main/res/layout/item_bill_choice.xml
+++ b/app/src/main/res/layout/item_bill_choice.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="16dp"
         android:orientation="vertical"
         android:overScrollMode="never"
+        android:layoutAnimation="@anim/layout_animation"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/next_Btn"
         app:layout_constraintEnd_toEndOf="parent"
