--- a/app/src/main/res/layout/bill_item.xml
+++ b/app/src/main/res/layout/bill_item.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:background="#C0C0F8"
-    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:background="@drawable/bills_item_bg"
+    android:padding="10dp"
+    android:layout_margin="6dp"
     android:layout_height="wrap_content">
 
 
@@ -13,7 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="A"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:text=""
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/iconBill"
         app:layout_constraintStart_toStartOf="@+id/iconBill"
@@ -21,12 +24,11 @@
 
     <ImageView
         android:id="@+id/iconBill"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
