Add list of services

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,4 +50,5 @@
     <color name="orange_dark">#d1833d</color>
     <color name="default_page_blue">#141928</color>
     <color name="zatrek_blue">#14548c</color>
+    <color name="mag_color">#AD2184</color>
 </resources>
